# a_wgpu

./: .gitignore  Cargo.toml  Readme.md  deployment_cert-2.der  encryption_public_key.pem  openssl.py  run.sh  t.txt  your_keystore.keystore
app/: build.gradle
app/src/main/java/co/realfit/nawinitwgpu/: MainActivity.java
crates/app/: Cargo.toml  README.md
crates/app/config/: settings.toml
crates/app/examples/: hello_world.rs
crates/app/src/: app.rs  c.rs  lib.rs  lib.txt  lib.txt2  lock.txt  renderers.rs  run_blocker.rs
crates/app/src/client/: mod.rs
docker/: Dockerfile
src/: lib.rs
